# dddcpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
meetapp/: CMakeLists.txt  date_meetup.json  main.cpp  proposte.json
meetlib/: CMakeLists.txt  aggregati.cpp  aggregati.h  dto.cpp  dto.h  entita.cpp  entita.h  oggetti_valore.cpp  oggetti_valore.h  pianificatore.cpp  pianificatore.h  tipi_semplici.cpp  tipi_semplici.h  utilita.h
meettest/: CMakeLists.txt  entita_test.cpp  oggetti_valore_test.cpp
slides/: index.html  package-lock.json
third/catch2/: catch.hpp
third/tloptional/: optional.hpp
